--- a/index.html
+++ b/index.html
@@ -40,7 +40,29 @@
                     </form>
                 </div>
             </div>
+            
         </div>
+
+        <!-- edit model -->
+
+        <div class="edit-model model-wrapper">
+            <div class="model">
+                <div class="model-header"><h3>Edit user</h3></div>
+                <div class="model-body">
+                    <form class="form" autocomplete="off">
+                        <input type="text" name="fullname" placeholder="full Name" required>
+                        <input type="text" name="department" placeholder="department" required>
+                        <input type="email" name="Email" placeholder="email" required>
+                        <input type="number" name="phone" placeholder="phone" required>
+                        <button class="btn btn-model">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+
+        
     </div>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
