--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         firebase.initializeApp(firebaseConfig);
         const db=firebase.firestore();
       </script>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </body>
 
 </html>
