--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             
             </table>
             <button class="btn btn-add">Add user</button>
+            <button class="btn btn-add"> Print</button>
         </div>
 
         <div class="add-model model-wrapper">
@@ -62,8 +63,11 @@
 
 
 
+
+
         
     </div>
+    <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.21.0/firebase-firestore.js"></script>
     <script>
